<resources>
    <string name="razerKeyTest">rzp_test_9Nt3b3grKDXHcq</string>
    <string name="razerKey">rzp_live_JHkGoJA11Bv4sg</string>
    <string name="app_name">Happiroo</string>
    <string name="notifications">Notifications</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="about_mclap">About Happiroo</string>
    <string name="share_app">Share App</string>
    <string name="rate_mclap">Rate Happiroo</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="my_profile">My Profile</string>
    <string name="title">title</string>
    <string name="select_a_service">Select a service</string>
    <string name="how_we_do">How we do</string>
    <string name="rate_cards">Rate Cards</string>
    <string name="m_clap_assurance">Happiroo Assurance</string>
    <string name="skilled_and_verified_professionals_n_n_u20b95000_damage_cover_on_every_booking">Skilled and verified professionals\n\n₹5000 damage cover on every booking</string>
    <string name="address_details">Address Details</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="change">Change</string>
    <string name="address_type">Address Type</string>
    <string name="update_now">Update Now</string>
    <string name="flat_building_street">Flat / Building / Street</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_address">Select Address</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="my_saved_addresses">My Saved Addresses</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="help">Help</string>
    <string name="add_review">Add Review</string>
    <string name="booking_details">Booking Details</string>
    <string name="service_location">Service Location</string>
    <string name="timing">Timing</string>
    <string name="invoice">Invoice</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="service_start_otp">Service start OTP</string>
    <string name="my_cart">My Cart</string>
    <string name="color_tray_wallet">Wallet</string>
    <string name="you_used">You used</string>
    <string name="apply_promo_code">Apply promo code</string>
    <string name="continue_to_pay">Continue to pay</string>
    <string name="overview">Overview</string>
    <string name="payment_options">Payment Options</string>
    <string name="service_slot">Service Slot</string>
    <string name="services">Services</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="view_detail">View Detail</string>
    <string name="need_help">Need Help?</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="coutry">Country</string>
    <string name="welcome_to_mclap">Welcome to Happiroo</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="service_description_amp_detail"><![CDATA[Service Description & Detail]]></string>
    <string name="what_s_included">What\'s included?</string>
    <string name="what_s_excluded">What\'s excluded?</string>
    <string name="brand_s_and_equipment_used">Brand(s) and Equipment Used</string>
    <string name="additional_details">Additional Details</string>
    <string name="lemend_assurance">Happiroo Assurance</string>
    <string name="customer_ratings_amp_reviews"><![CDATA[Customer Ratings & Reviews]]></string>
    <string name="add_your_rating">Add your rating</string>
    <string name="damage_cover_on_every_booking">Skilled and verified professionals\n\n₹5000 damage cover on every booking</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="item_description">Description</string>
    <string name="no_ratings_for_this_product">No ratings for this product</string>
    <string name="five_reviews">60 Reviews</string>
    <string name="rate_product">Rate Product</string>
    <string name="ratings_amp_reviews">Ratings and Review</string>
    <string name="product_details">1.Support A2DP,AVRCP, Handsfree profile,FM radio
2.With FM function, can search radio station broadcast automatically
    </string>
    <string name="my_orders">My Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items">Items</string>
    <string name="favourite_products">Favourite Products</string>
    <string name="channel_id">channel_1</string>
</resources>