<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.auth.AuthenticateActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_120dp"
        android:src="@drawable/styling_image1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-12dp"/>

    <ImageView
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:src="@drawable/styling_image3"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="@dimen/_56dp"/>

    <ImageView
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:src="@drawable/styling_image2"
        android:layout_alignParentEnd="true"
        android:rotation="30"
        android:layout_marginEnd="-20dp" />

    <TextView
        android:id="@+id/skipLoginTxtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_for_now"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/border_corner_background"
        android:paddingStart="@dimen/_16dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingBottom="@dimen/_8dp"
        android:fontFamily="@font/lato_medium"
        android:textSize="@dimen/_14sp"
        android:textColor="@color/dark_gray"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_12dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_156dp"
                android:layout_height="@dimen/_80dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_mclap"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/lato_medium"
                android:textColor="@color/black"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:orientation="horizontal"
                android:background="@drawable/text_bg"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp">

                <ImageView
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:src="@drawable/india"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91"
                    android:textColor="@color/dark_gray"
                    android:fontFamily="@font/lato_medium"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_6dp"
                    android:textSize="@dimen/_16sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_gray"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginBottom="@dimen/_8dp"/>

                <EditText
                    android:id="@+id/mobileLogin_eT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:layout_marginStart="@dimen/_12dp"
                    android:layout_marginEnd="@dimen/_12dp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/mobile_number"
                    android:textColor="@color/dark_gray"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="10"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginBtnLinear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:visibility="gone"
                android:background="@drawable/button_background"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login / Signup"
                    android:fontFamily="@font/lato_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp"/>

                <ImageView
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:src="@drawable/login"
                    android:tint="@color/white"
                    android:layout_marginStart="@dimen/_8dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"/>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>